[project]
name = "tree-printer"
version = "0.1.0"
description = ""
authors = [
    {name = "FelipePassarela",email = "126916744+FelipePassarela@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tree_printer", from = "src"}]

[tool.poetry.scripts]
tree-printer = "tree_printer.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
